wrap top navigation bar in headed-fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,22 +10,27 @@ body {
 
 /* Header styling  */
 .header {
-    padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+.header-fixed {
+    padding: 20px;
+}
+
+.header-fixed h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+.header-fixed h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+
+/* navigation bar */
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,11 +38,11 @@ body {
     font-size: 20px;
 }
 
-.header nav ul {
+nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -63,10 +68,7 @@ p {
 }
 
 
-
-
-/* Home  */
-#hero {
+.header-banner {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -74,6 +76,16 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* Home  */
+/* #hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+} */
 
 
 /* Content section */
